Edited wiki page through web user interface.

--- a/wiki/Skill_Hook.wiki
+++ b/wiki/Skill_Hook.wiki
@@ -2,8 +2,7 @@
 
 <br/>
 <br/>
-*Description:*
-----
+*Description:*<br/>
 A punch involving the use of turning to aim toward the side of the head or body
  
 <br/>
