--- a/wiki/Skill_Hook.wiki
+++ b/wiki/Skill_Hook.wiki
@@ -11,7 +11,7 @@ A punch involving the use of turning to aim toward the side of the head or body
 Required Level: 3 <br/>
 Range: 1 Tile <br/>
 Radius: 1 Tile <br/>
-Damage: ((1 - 3) * _Skill Rank_) + ([Attribute_Strength Strength] * 2)<br/>
+Damage: ((1 - 3) `*` _Skill Rank_) + ([Attribute_Strength Strength] `*` 2)<br/>
 Damage Type: [DamageType_Crushing Crushing]<br/>
 Speed: 0.75 seconds<br/>
 Recovery: 0.25 seconds<br/>
