Edited wiki page through web user interface.

--- a/wiki/Skill_BackKick.wiki
+++ b/wiki/Skill_BackKick.wiki
@@ -18,6 +18,6 @@ Recovery: 1.0 seconds<br/>
  
 <br/>
 <br/>
-*Reference:*
+*Reference:*<br/>
 [http://en.wikipedia.org/wiki/Kick] <br/>
 [http://www.youtube.com/watch?v=_IN4bcarV50] <br/>
