Edited wiki page through web user interface.

--- a/wiki/Skill_FocusedStrength.wiki
+++ b/wiki/Skill_FocusedStrength.wiki
@@ -10,5 +10,5 @@ The brawler focuses mental energy to increase his strength temporarily.
 *Stats:*
 Required Level: 1<br/>
 Cost: 25 - (_Skill Rank_) Mental Points<br/>
-Duration: 5 + (_Skill Rank_ * 3) seconds<br/>
-Bonus: 2 + (_Skill Rank_ * 1.5) [Attribute_Strength Strength]<br/>
+Duration: 5 + (_Skill Rank_ `*` 3) seconds<br/>
+Bonus: 2 + (_Skill Rank_ `*` 1.5) [Attribute_Strength Strength]<br/>
