Edited wiki page through web user interface.

--- a/wiki/Skill_BounceShot.wiki
+++ b/wiki/Skill_BounceShot.wiki
@@ -1,4 +1,4 @@
-[Main Dimensions] - [Classes] [Class_Archer Archer]
+[Main Dimensions] - [Classes] - [Class_Archer Archer]
  
 <br/>
 *Description:*<br/>
