--- a/wiki/Skill_MultiShot.wiki
+++ b/wiki/Skill_MultiShot.wiki
@@ -1,5 +1,5 @@
-[Main Dimensions] - [Classes] - [Class_Archer Archer]
- 
+[Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
+
 <br/>
 *Description:*<br/>
 Fires multiple arrows within the firing arc.
