--- a/wiki/Skill_BounceShot.wiki
+++ b/wiki/Skill_BounceShot.wiki
@@ -1,5 +1,5 @@
-[Main Dimensions] - [Classes] - [Class_Archer Archer]
- 
+[Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
+
 <br/>
 *Description:*<br/>
 The arrow bounces off the target it hits toward another target. Shots with this skill are limited to half the range of the firing bow. Each bounce uses the bounce range divided in half for each bounce. For example: A shot is fired at range of 4, bounce range is currently 4. The shot bounces off the first target, hitting the second target within 4 tiles. The shot then bounces to a new target within 2 tiles of the second target. Finaly the shot can bounce to a new target within 1 tile of the third target. Any shot that runs out of range or damage will stop the chain.
