Edited wiki page through web user interface.

--- a/wiki/Skill_LongBowUse.wiki
+++ b/wiki/Skill_LongBowUse.wiki
@@ -1,4 +1,5 @@
-Dimensions Archer
+[Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
+
  
 Description:
 Allows the archer to use long bows
