--- a/wiki/Skill_CompoundBowUse.wiki
+++ b/wiki/Skill_CompoundBowUse.wiki
@@ -1,4 +1,4 @@
-Dimensions Archer
+[Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
  
 Description:
 Allows the archer to use compound bows
