Edited wiki page through web user interface.

--- a/wiki/Skill_BallistaUse.wiki
+++ b/wiki/Skill_BallistaUse.wiki
@@ -1,11 +1,14 @@
 [Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
 
-Description:
+<br/>
+*Description:*<br/>
 Allows the archer to use ballistae
  
-Stats:
-Required Level: 27
-Range Bonus: (Skill Rank / 2)
-Damage Bonus: ((10 - 22) * Skill Rank)
-Speed Bonus: (0.00625 * Skill Rank)
-Recovery Bonus: (0.00625 * Skill Rank)
+<br/>
+<br/>
+*Stats:*
+Required Level: 27<br/>
+Range Bonus: (_Skill Rank_ / 2)<br/>
+Damage Bonus: ((10 - 22) `*` _Skill Rank_)<br/>
+Speed Bonus: (0.00625 `*` _Skill Rank_)<br/>
+Recovery Bonus: (0.00625 `*` _Skill Rank_)<br/>
