--- a/wiki/Skill_CrossBowUse.wiki
+++ b/wiki/Skill_CrossBowUse.wiki
@@ -1,11 +1,14 @@
 [Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
 
-Description:
+<br/>
+*Description:*<br/>
 Allows the archer to use crossbows
  
-Stats:
-Required Level: 19
-Range Bonus: (Skill Rank / 3)
-Damage Bonus: ((7 - 17) * Skill Rank)
-Speed Bonus: (0.0125 * Skill Rank)
-Recovery Bonus: (0.0125 * Skill Rank)
+<br/>
+<br/>
+*Stats:*
+Required Level: 19<br/>
+Range Bonus: (_Skill Rank_ / 3)<br/>
+Damage Bonus: ((7 - 17) `*` _Skill Rank_)<br/>
+Speed Bonus: (0.0125 `*` _Skill Rank_)<br/>
+Recovery Bonus: (0.0125 `*` _Skill Rank_)<br/>
