--- a/wiki/Skill_ExplosiveShot.wiki
+++ b/wiki/Skill_ExplosiveShot.wiki
@@ -1,16 +1,17 @@
 [Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
 
-
-Description:
+<br/>
+*Description:*<br/>
 Fires an arrow that explodes doing raidus explosive damage when it hits the target. The arrows damage is done normally to the target as well as the explosive damage.
- 
-Stats:
-Required Level: 23
-Range: Weapon Range
-Radius: (Skill Rank / 3) Tiles
-Target Damage: Weapon Damage
-Damage Type: Weapon Damage Type
-Radius Damage: ((15 - 35) * Skill Rank)
-Radius Damage Type: Heat
-Speed: Weapon Speed * 2.5
-Recovery: Weapon Recovery * 2.5
+
+<br/>
+*Stats:*
+Required Level: 23<br/>
+Range: _Weapon Range_<br/>
+Radius: (_Skill Rank_ / 3) Tiles<br/>
+Target Damage: _Weapon Damage_<br/>
+Damage Type: _Weapon Damage Type_<br/>
+Radius Damage: ((15 - 35) `*` _Skill Rank_)<br/>
+Radius Damage Type: [DamageType_Heat Heat]<br/>
+Speed: _Weapon Speed_ `*` 2.5<br/>
+Recovery: _Weapon Recovery_ `*` 2.5<br/>
