--- a/wiki/Skill_ScatterShot.wiki
+++ b/wiki/Skill_ScatterShot.wiki
@@ -1,14 +1,15 @@
 [Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
 
- 
-Description:
+<br/>
+*Description:*<br/>
 An arrow is fired into the air which scatters into multiple fragments at the peak of the shot. The fragments then rain down on enemys below. The epicenter of the scatter takes the full damage, fall off is linear toward the outer edges of the scatter radius.
- 
-Stats:
-Required Level: 16
-Range: Weapon Range * 1.5
-Radius: 1 + (2 * (Skill Rank / 3)) Tiles
-Damage: (Weapon Damage * 2) + (Skill Rank * (5 - 25))
-Damage Type: Weapon Damage Type
-Speed: Weapon Speed * 2
-Recovery: Weapon Recovery * 2
+
+<br/>
+*Stats:*<br/>
+Required Level: 16<br/>
+Range: _Weapon Range_ `*` 1.5<br/>
+Radius: 1 + (2 `*` (_Skill Rank_ / 3)) Tiles<br/>
+Damage: (_Weapon Damage_ `*` 2) + (_Skill Rank_ `*` (5 - 25))<br/>
+Damage Type: _Weapon Damage Type_<br/>
+Speed: _Weapon Speed_ `*` 2<br/>
+Recovery: _Weapon Recovery_ `*` 2<br/>
