--- a/wiki/Skill_RapidShot.wiki
+++ b/wiki/Skill_RapidShot.wiki
@@ -1,14 +1,15 @@
 [Main Dimensions] - [Classes] - [Class_Archer Archer]<br/>
 
 <br/>
-Description:
+*Description:*
 Fires several arrows in rapid succession. The archer can aim while using this skill but can not move.
- 
-Stats:
-Required Level: 11
-Range: Weapon Range * 0.75
-Shot Count: 4 + (Skill Rank / 2)
-Damage: Weapon Damage * (0.25 + (0.05 * Skill Rank))
-Damage Type: Weapon Damage Type
-Speed: Weapon Speed * 0.9
-Recovery: Weapon Recovery
+
+<br/>
+*Stats:*<br/>
+Required Level: 11<br/>
+Range: _Weapon Range_ `*` 0.75<br/>
+Shot Count: 4 + (_Skill Rank_ / 2)<br/>
+Damage: _Weapon Damage_ `*` (0.25 + (0.05 `*` _Skill Rank_))<br/>
+Damage Type: _Weapon Damage Type_<br/>
+Speed: _Weapon Speed_ `*` 0.9<br/>
+Recovery: _Weapon Recovery_<br/>
