Edited wiki page through web user interface.

--- a/wiki/Lore_Giliarn.wiki
+++ b/wiki/Lore_Giliarn.wiki
@@ -4,4 +4,4 @@
 The Giliarn move from dimension to dimension using portals called dimensional rifts. Thier sole purpose appears to be conquest. They move through enemy civilizations with little regard for the uniqeness of the civilization, they are only driven to gain more territory.
 
 <br/> 
-Concept Art
+*Concept Art*
