Edited wiki page through web user interface.

--- a/wiki/Askaran_ForwardScout.wiki
+++ b/wiki/Askaran_ForwardScout.wiki
@@ -20,17 +20,17 @@ Movement Speed: 2.5 tiles / second<br/>
 Weapon: [CreatureWeapon_Claws Claws]<br/>
 
 <br/> 
-Health: 50<br/>
-Attack Range: 20<br/>
-Crushing Resist: 0<br/>
-Piercing Resist: 0<br/>
-Slashing Resist: 0<br/>
-Mental Resist: 0<br/>
-Heat Resist: 15<br/>
-Cold Resist: 15<br/>
-Electrical Resist: 5<br/>
-Water Resist: 0<br/>
-Acid Resist: 35<br/>
-Viral Resist: 10<br/>
-Holy Resist: 0<br/>
-Death Resist: 15<br/>
+[Attribute_Health Health]: 50<br/>
+[Attribute_AttackRange Attack Range]: 20<br/>
+[Attribute_CrushingResist Crushing Resist]: 0<br/>
+[Attribute_PiercingResist Piercing Resist]: 0<br/>
+[Attribute_SlashingResist Slashing Resist]: 0<br/>
+[Attribute_MentalResist Mental Resist]: 0<br/>
+[Attribute_HeatResist Heat Resist]: 15<br/>
+[Attribute_ColdResist Cold Resist]: 15<br/>
+[Attribute_ElectricalResist Electrical Resist]: 5<br/>
+[Attribute_WaterResist Water Resist]: 0<br/>
+[Attribute_AcidResist Acid Resist]: 35<br/>
+[Attribute_ViralResist Viral Resist]: 10<br/>
+[Attribute_HolyResist Holy Resist]: 0<br/>
+[Attribute_DeathResist Death Resist]: 15<br/>
