Edited wiki page through web user interface.

--- a/wiki/Askaran_Elite.wiki
+++ b/wiki/Askaran_Elite.wiki
@@ -19,18 +19,18 @@ Level: 11<br/>
 Movement Speed: 3 tiles / second<br/>
 Weapon: [CreatureWeapon_Claws Claws]<br/>
  
-<br/>
-Health: 450
-Attack Range: 23
-Crushing Resist: 50
-Piercing Resist: 50
-Slashing Resist: 50
-Mental Resist: 100
-Heat Resist: 250
-Cold Resist: 250
-Electrical Resist: 15
-Water Resist: 0
-Acid Resist: 275
-Viral Resist: 120
-Holy Resist: 45
-Death Resist: 150
+<br/> 
+[Attribute_Health Health]: 450<br/>
+[Attribute_AttackRange Attack Range]: 23<br/>
+[Attribute_CrushingResist Crushing Resist]: 50<br/>
+[Attribute_PiercingResist Piercing Resist]: 50<br/>
+[Attribute_SlashingResist Slashing Resist]: 50<br/>
+[Attribute_MentalResist Mental Resist]: 100<br/>
+[Attribute_HeatResist Heat Resist]: 250<br/>
+[Attribute_ColdResist Cold Resist]: 250<br/>
+[Attribute_ElectricalResist Electrical Resist]: 15<br/>
+[Attribute_WaterResist Water Resist]: 0<br/>
+[Attribute_AcidResist Acid Resist]: 275<br/>
+[Attribute_ViralResist Viral Resist]: 120<br/>
+[Attribute_HolyResist Holy Resist]: 45<br/>
+[Attribute_DeathResist Death Resist]: 150<br/>
