--- a/wiki/Attribute_Agility.wiki
+++ b/wiki/Attribute_Agility.wiki
@@ -3,3 +3,5 @@
 <br/>
 *Description*<br/>
 The character's physical speed. This is how quickly the character can move and react physically.
+
+Base movement speed for players is 1.3 meters/second.  The player gains an additional 0.1 meters per second for every 5 points of Agility.
