Edited wiki page through web user interface.

--- a/wiki/Skill_LaunchSeekerMissle.wiki
+++ b/wiki/Skill_LaunchSeekerMissle.wiki
@@ -2,13 +2,13 @@
 
 <br/>
 *Description:*<br/>
-The rocketeer kneels, aims, and fires a rocket propelled grenade.
+The rocketeer picks a target and activates his seeker missile battery.
 
 <br/> 
 *Stats:*<br/>
 Required Level:<br/>
 Range: _Weapon Range_ + (_Skill Rank_ / 8)<br/>
-Damage: _Weapon Damage_ + ((6 - 10) `*` _Skill Rank_)<br/>
+Damage: _Weapon Damage_ + ((8 - 14) `*` _Skill Rank_)<br/>
 Damage Type: _Weapon Damage Type_<br/>
 Speed: _Weapon Speed_<br/>
 Recovery: _Weapon Recovery_<br/>
