--- a/wiki/Class_Rocketeer.wiki
+++ b/wiki/Class_Rocketeer.wiki
@@ -16,7 +16,7 @@ The Rocketeer is a character skilled in the use of rocket based projectiles.
 [Skill_LaunchBallisticMissile Launch Ballistic Missile]<br/>
  
 <br/>
-*Battery Placement*
+*Battery Placement*<br/>
 [Skill_PlaceSeekerMissleBattery Place Seeker Missile Battery]<br/>
 [Skill_PlaceCruiseMissleBattery Place Cruise Missile Battery]<br/>
 [Skill_PlaceBallisticMissileBattery Place Ballistic Missile Battery]<br/>
