Edited wiki page through web user interface.

--- a/wiki/Skill_SanityAnchor.wiki
+++ b/wiki/Skill_SanityAnchor.wiki
@@ -2,10 +2,10 @@
 
 <br/>
 *Description:*<br/>
-The medic lives a healthy lifestyle giving him a permanant health regeneration. The medic can also pass this wisdom and benefit along to other nearby players. This is a passive ability which is always active.
+The medic provides a constant state of relaxation, focus, and realization of reality to himself and other nearby players resulting in increased mental regeneration. This is a passive ability which is always active.
 
 <br/> 
 *Stats:*<br/>
 Required Level:<br/>
 Radius = 1 + _Skill Rank_
-Health Per Second: (2 - 4) `*` _Skill Rank_
+Mental Per Second: (2 - 4) `*` _Skill Rank_
