--- a/wiki/Skill_TargetAnalysis.wiki
+++ b/wiki/Skill_TargetAnalysis.wiki
@@ -2,10 +2,10 @@
 
 <br/>
 *Description:*<br/>
-The medic lives a healthy lifestyle giving him a permanant health regeneration. The medic can also pass this wisdom and benefit along to other nearby players. This is a passive ability which is always active.
+The medic can find weak spots in enemy anatomy providing a damage bonus to himself and other nearby players. This is a passive ability which is always active.
 
 <br/> 
 *Stats:*<br/>
 Required Level:<br/>
 Radius = 1 + _Skill Rank_
-Health Per Second: (2 - 4) `*` _Skill Rank_
+Damage Bonus: (6 - 12) `*` _Skill Rank_
