Edited wiki page through web user interface.

--- a/wiki/Skill_WaterToWine.wiki
+++ b/wiki/Skill_WaterToWine.wiki
@@ -1,4 +1,4 @@
-[Main Dimensions] - [Classes] [Class_Priest Priest]
+[Main Dimensions] - [Classes] - [Class_Priest Priest]
 
 <br/>
 *Description:*<br/>
